# featbit-rust-sdk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
benches/: evaluation_hot_path.rs
docs/testing/: dotnet-test-parity-report.md
examples/: axum.rs  fbclient_axum.rs  fbclient_console.rs  openfeature.rs  openfeature_console.rs
examples/test/: README.md  cloud_axum_extreme.rs
examples/test/cloud_axum_extreme/: api.rs  application.rs  config.rs  flag_config.rs  load.rs  scenario.rs  telemetry.rs
integrations/opentelemetry/: Cargo.toml  README.md
integrations/opentelemetry/src/: lib.rs
scripts/: release.py
scripts/tests/: test_release.py
src/: client.rs  data_sync.rs  error.rs  events.rs  lib.rs  model.rs  observation.rs  open_feature.rs  options.rs  prepared.rs  store.rs  test_support.rs  worker.rs
src/client/: evaluation.rs  tests.rs
src/data_sync/: connection.rs  protocol.rs  status.rs  tests.rs
src/data_sync/tests/: protocol.rs  reconnect.rs  support.rs  synchronization.rs
src/evaluation/: dispatch.rs  evaluator.rs  mod.rs  operators.rs  segments.rs  test_support.rs
src/evaluation/evaluator/: tests.rs
src/evaluation/segments/: tests.rs
src/events/: payload.rs  tests.rs  worker.rs
src/model/: tests.rs
src/model/fixtures/: README.md  dotnet-one-flag.json  dotnet-one-segment.json
src/open_feature/: tests.rs
src/options/: tests.rs  validation.rs
src/store/: tests.rs
