[package]
name = "featbit-server-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"
authors = ["FeatBit"]
description = "FeatBit server-side SDK and OpenFeature provider for Rust"
license = "Apache-2.0"
repository = "https://github.com/featbit/featbit-rust-sdk"
homepage = "https://www.featbit.co"
readme = "README.md"
keywords = ["featbit", "feature-flags", "openfeature", "server-sdk"]
categories = ["api-bindings", "web-programming"]

[[example]]
name = "cloud_axum_extreme"
path = "examples/test/cloud_axum_extreme.rs"

[dependencies]
arc-swap = "1.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossbeam-channel = "0.5"
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
md-5 = "0.10"
# open-feature 0.3.0 references its log and mock exports unconditionally, so its default features
# cannot currently be disabled even though this crate does not use the mock API at runtime.
open-feature = "0.3.0"
parking_lot = "0.12"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = "2"

[dev-dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio", "tracing"] }
env_logger = "0.11"
mockito = "1.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
